





import java.util.List;
import java.util.ArrayList;

public class Dealer_Interface  {




    public Dealer_Interface(
    ) {
    }




}