





import java.util.List;
import java.util.ArrayList;

public class Dealer_Type_Interface  {




    public Dealer_Type_Interface(
    ) {
    }




}