





import java.util.List;
import java.util.ArrayList;

public class Deck1  {

    private int Totalcards;



    public Deck1(
        int Totalcards    ) {
        this.Totalcards = Totalcards;
    }


    public int getTotalcards() {
        return Totalcards;
    }

    public void setTotalcards(int Totalcards) {
        this.Totalcards = Totalcards;
    }


}