





import java.util.List;
import java.util.ArrayList;

public class Pitch  {






    private Player player;




    private Game game;


    public Pitch(
    ) {
    }



    public Player getPlayer() {
        return player;
    }

    public void setPlayer(Player player) {
        this.player = player;
    }
    public Game getGame() {
        return game;
    }

    public void setGame(Game game) {
        this.game = game;
    }

}