





import java.util.List;
import java.util.ArrayList;

public class Pitch1  {

    private None TotalDealer;



    public Pitch1(
        None TotalDealer    ) {
        this.TotalDealer = TotalDealer;
    }


    public None getTotaldealer() {
        return TotalDealer;
    }

    public void setTotaldealer(None TotalDealer) {
        this.TotalDealer = TotalDealer;
    }


}