





import java.util.List;
import java.util.ArrayList;

public class Rank1  {

    private int intCard_value;



    public Rank1(
        int intCard_value    ) {
        this.intCard_value = intCard_value;
    }


    public int getIntcard_value() {
        return intCard_value;
    }

    public void setIntcard_value(int intCard_value) {
        this.intCard_value = intCard_value;
    }


}