@startuml
class Al_player {
  + bet : int
  + points : int
}
class Card {
  + rank : Rank
  + suit : Suit
}
class Card1 {
  + Rank : Rank
  + cardsRemianing : int
  + suit : Suit
  + total_card : str
}
class Dealer_Interface {
}
class Dealer_Type_Interface {
}
class Deck {
  + cardsDealt : str
  + deck : str
}
class Deck1 {
  + Totalcards : int
}
class Game {
  + dealerCards : str
  + playerCards : str
}
class Home {
}
class List_Card__external {
}
class Pitch {
}
class Pitch1 {
  + TotalDealer : Dealer_Type_Interface
}
class PitchDealer {
  + Randomcards : Card1
  + SelectDealer : Dealer_Interface
  + displaycard : Card1
}
class Player {
  + ID : str
  + bet : int
}
class Player1 {
  + bet : int
  + id : str
  + points : int
}
enum Rank {
}
class Rank1 {
  + intCard_value : int
}
enum Suit {
}
class cardType {
  + Diamond : cardType
  + Heart : cardType
  + Spades : cardType
  + club : cardType
}
Card "0..1" -- "0..1" Deck : Card_Deck
Deck "0..1" -- "0..1" Game : Deck_Game
Game "0..1" -- "0..1" Pitch : Game_BlackJackMain
Deck "0..1" -- "0..1" List_Card__external : List_Card__Deck
Pitch "0..1" -- "0..1" Player : Player_BlackJackMain
Deck "0..1" -- "0..1" Player : Player_Deck
@enduml